--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-jedi-front",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Oliko136.github.io/code-jedi-front",
+  "homepage": "https://GoitStudentsWorks.github.io/fs94-react-node-Oliko136",
   "dependencies": {
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
